--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,21 +13,21 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  build-dev:
     runs-on: self-hosted
+    environment: dev
     container:
       image: alpine
       # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Print Secret
+        run: echo ${{ secrets.AKO }}
+  build-prod:
+    runs-on: self-hosted
+    environment: prod
+    container:
+      image: alpine
+      # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - name: Print Secret
+        run: echo ${{ secrets.AKO }}
