--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,9 +3,9 @@
 name: CI
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "dev","prod" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "dev","prod" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
