--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,9 @@ jobs:
         run: |
           echo "Running on branch ${{ github.ref }}"
           if [ "${{ github.ref }}" = "refs/heads/master" ]; then
-            echo "::set-output name=env_name::Production"
+            echo "::set-output name=env_name::prod"
           elif [ "${{ github.ref }}" = "refs/heads/dev" ]; then
-            echo "::set-output name=env_name::Dev"
+            echo "::set-output name=env_name::dev"
           else
              echo "::set-output name=env_name::Features"
           fi         
@@ -38,11 +38,14 @@ jobs:
   publish:
     needs: check_env
     runs-on: ubuntu-latest
+    environment: 
+      name: ${{ needs.build.outputs.env_name }}
     steps:
     - name: Print Var 2
       shell: sh
       run: |
           echo test2
           echo $TVAR2
+          echo $SVAR
 
          
