Replace self-hosted runner with ubuntu-latest

--- a/.github/workflows/database.yml
+++ b/.github/workflows/database.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   print-branch-info:
     if: github.event.pull_request.merged == true
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Print Branch Information
         run: |
